--- a/publications/index.html
+++ b/publications/index.html
@@ -22,7 +22,7 @@
 </a></div><div class="nav-item"><a href="/publications/" class="nav-link router-link-exact-active router-link-active">
   Publications
   <!----></a></div><div class="nav-item"><a href="/miscellaneous/" class="nav-link">
-  s
+  Experiences
 <div class="theme-default-content content__default">
   <div class="tagpapers">
     <h2>All Publications by Year</h2>
@@ -40,20 +40,23 @@
     </div>
   </div>
   <div class="papers">
-    <h1>2023</h1>
+    <h1>2024</h1>
     <div class="paper show-border highlight">
       <div class="paper-content">
-        <p><b>PatchZero: Defending against Adversarial Patch Attacks by Detecting and Zeroing the Patch</b></p>
-        <p>Ke Xu*, <b>Yijun Xiao</b>*, Zhaoheng Zheng, Kaijie Cai, Ram Nevatia.</p>
+        <p><b>Analysing the Factors in Shaping Neighbourhood Restaurants Sceneries</b></p>
+        <p> <b>Yijun Xiao</b>*, Sinan Yuan.</p>
         <i><p>IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2023.</p></i>
         <span>[<a shape="rect" class="toggle">Abstract</a>]</span>
-        <span>[<a href="https://openaccess.thecvf.com/content/WACV2023/papers/Xu_PatchZero_Defending_Against_Adversarial_Patch_Attacks_by_Detecting_and_Zeroing_WACV_2023_paper.pdf" target="_blank">Paper</a>]</span>
+        <span>[<a href="https://papers.cumincad.org/data/works/att/caadria2024_176.pdf" target="_blank">Paper</a>]</span>
+        <span>[<a shape="rect" class="toggle">Bibtex</a>]</span>
       </div>
       <div class="abstract" style="display: none;">
-        <p>This paper presents a novel method for defending against adversarial patch attacks by detecting and zeroing the patch...</p>
+        <p>This study looks at neighborhood restaurants in Tianjin, China, during rapid urbanization and changing consumer preferences. It analyzes factors like demand, transportation, and competition, finding a significant rise in community restaurants from 2018 to 2021. Key influences include population density and housing prices.</p>
       </div>
     </div>
+    <!-- 你可以在这里添加更多的文章 -->
   </div>
 </div>
 
+Copyright © 2024
 <a href="https://yijun-xiao.github.io/" target="_blank" title="Yijun Xiao"><span style="color:#4693B8;">Yijun Xiao</span></a> <br><br>
