--- a/publications/index.html
+++ b/publications/index.html
@@ -47,21 +47,18 @@
           <i><p>International Conference of the Association for Computer-Aided Architectural Design Research in Asia (<b>CADDRIA</b>), 2024.</p></i>
           <span>
             [<a href="javascript:void(0);" class="toggle-abstract">Abstract</a>]
-          </span>
-          <span>[<a href="https://papers.cumincad.org/cgi-bin/works/_id=ecaade2013/Show?caadria2024_176" target="_blank">Paper</a>]</span>
-          <span>[<a shape="rect" class="toggle">Bibtex</a>]</span>
-        </div>
-        <div class="abstract" style="display: none;">
-          <table bgcolor="#ace5f2">
-            <tr>
+          <span>
+          <div class="abstract" style="display: none;">
+            <table bgcolor="#ace5f2">
+             <tr>
               <td>
                 <span>This study looks at neighborhood restaurants in Tianjin, China, during rapid urbanization and changing consumer preferences. It analyzes factors like demand, transportation, and competition, finding a significant rise in community restaurants from 2018 to 2021. Key influences include population density and housing prices.</span>
               </td>
-            </tr>
-          </table>
-        </div>
-      </div>
+          </tr>
+      </table>
     </div>
+          <span>[<a href="https://papers.cumincad.org/cgi-bin/works/_id=ecaade2013/Show?caadria2024_176" target="_blank">Paper</a>]</span>
+          <span>[<a shape="rect" class="toggle">Bibtex</a>]</span>
   </div>
 </main>
 
