--- a/publications/index.html
+++ b/publications/index.html
@@ -48,8 +48,10 @@
           <span>
             [<a href="javascript:void(0);" class="toggle-abstract">Abstract</a>]
           <span>
+          <span>[<a href="https://papers.cumincad.org/cgi-bin/works/_id=ecaade2013/Show?caadria2024_176" target="_blank">Paper</a>]</span>
+          <span>[<a shape="rect" class="toggle">Bibtex</a>]</span>
           <div class="abstract" style="display: none;">
-            <table bgcolor="#ace5f2">
+            <table bgcolor="#f0f0f0">
              <tr>
               <td>
                 <span>This study looks at neighborhood restaurants in Tianjin, China, during rapid urbanization and changing consumer preferences. It analyzes factors like demand, transportation, and competition, finding a significant rise in community restaurants from 2018 to 2021. Key influences include population density and housing prices.</span>
@@ -57,8 +59,6 @@
           </tr>
       </table>
     </div>
-          <span>[<a href="https://papers.cumincad.org/cgi-bin/works/_id=ecaade2013/Show?caadria2024_176" target="_blank">Paper</a>]</span>
-          <span>[<a shape="rect" class="toggle">Bibtex</a>]</span>
   </div>
 </main>
 
