--- a/publications/index.html
+++ b/publications/index.html
@@ -72,5 +72,20 @@
 </script>
 
       
-Copyright © 2024
-<a href="https://yijun-xiao.github.io/" target="_blank" title="Yijun Xiao"><span style="color:#4693B8;">Yijun Xiao</span></a> <br><br>
+       </main>
+            <footer class="footer">
+                <div class="footer-content">
+                    <p>&copy; 2024 Yijun Xiao. All rights reserved.</p>
+                </div>
+            </footer>
+        </div>
+    </div>
+    
+    <script src="/assets/js/app.7c280fda.js"></script>
+    <script src="/assets/js/4.135c667e.js"></script>
+    <script src="/assets/js/15.6a08d0d2.js"></script>
+    <script src="/assets/js/10.b1e6a4f0.js"></script>
+    <script src="/assets/js/6.ecd310a8.js"></script>
+    <script src="/assets/js/8.76f38b4e.js"></script>
+</body>
+</html>
