--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="info">
                             <div class="name">Yijun Xiao</div>
                             <div class="bio">
-                                <p>Urban enthusiast with a Master's in Architecture</p>
+                                <p>Urban enthusiast, exploring built environments through big data</p>
                             </div>
                             <div class="socials">
                                 <div><a href="https://orcid.org/my-orcid?orcid=0009-0009-9115-5107" target="_blank"><img src="/icons/orcid.svg" alt="ORCID" title="ORCID"></a></div>
