--- a/publications/index.html
+++ b/publications/index.html
@@ -15,13 +15,13 @@
   Home
 </a></div><div class="nav-item"><a href="/publications/" class="nav-link router-link-exact-active router-link-active">
   Publications
-  <!----></a></div><div class="nav-item"><a href="/miscellaneous/" class="nav-link">
-  Miscellaneous
+  <!----></a></div><div class="nav-item"><a href="/experiences/" class="nav-link">
+  Experiences
 </a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/" class="nav-link">
   Home
 </a></div><div class="nav-item"><a href="/publications/" class="nav-link router-link-exact-active router-link-active">
   Publications
-  <!----></a></div><div class="nav-item"><a href="/miscellaneous/" class="nav-link">
+  <!----></a></div><div class="nav-item"><a href="/experiences/" class="nav-link">
   Experiences
 </a></div> <!----></nav>  <!----> </aside> <main class="page"> 
   <div class="theme-default-content content__default">
