--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                     </div>
                     <h2 id="about-me">About Me</h2>
                     <p>
-                        I am Yijun Xiao, an urban enthusiast with a M.Eng. focusing on spatial data science.I explore built environments through big data, with a focus on consumption geography and built environment morphology. 
+                        I am Yijun Xiao, an urban enthusiast with a M.Eng. of Architecture focusing on spatial data science.I explore built environments through big data, with a focus on consumption geography and built environment morphology. 
                     <p>
                         I obtained my master's degree from 
-                        <a href="https://www.tju.edu.cn/english" target="_blank" rel="noopener noreferrer">Tianjin University</a>, 
+                        <a href="https://www.tju.edu.cn/english" target="_blank" rel="noopener noreferrer">Tianjin University</a>.
                         Before that, I got my B.Arch. degree from 
                         <a href="https://en.whu.edu.cn/" target="_blank" rel="noopener noreferrer">Wuhan University</a>.
                         I currently work at the planning and development team at 
