--- a/publications/index.html
+++ b/publications/index.html
@@ -39,12 +39,12 @@
       </div>
     </div>
     <div class="papers">
-      <h1>2023</h1>
+      <h1>2024</h1>
       <div class="paper show-border highlight">
         <div class="paper-content">
           <p><b>Analysing the Factors in Shaping Neighbourhood Restaurants Sceneries</b></p>
           <p><b>Yijun Xiao</b>*, Sinan Yuan.</p>
-          <i><p>International Conference of the Association for Computer-Aided Architectural Design Research in Asia (<b>CADDRIA</b>), 2024.</p></i>
+          <i><p>International Conference of the Association for Computer-Aided Architectural Design Research in Asia (<b>CAADRIA</b>), 2024.</p></i>
           <span>
             [<a href="javascript:void(0);" class="toggle-abstract">Abstract</a>]
           <span>
