--- a/experiences/index.html
+++ b/experiences/index.html
@@ -44,14 +44,14 @@
                         <path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path>
                     </svg>
                 </div>
-                <a href="/" class="home-link router-link-exact-active router-link-active">
+                <a href="/" class="home-link">
                     <span class="site-name">Yijun Xiao</span>
                 </a>
                 <div class="links">
                     <nav class="nav-links can-hide">
-                        <div class="nav-item"><a href="/" class="nav-link router-link-exact-active router-link-active">Home</a></div>
+                        <div class="nav-item"><a href="/" class="nav-link">Home</a></div>
                         <div class="nav-item"><a href="/publications/" class="nav-link">Publications</a></div>
-                        <div class="nav-item"><a href="/experiences/" class="nav-link">Experiences</a></div>
+                        <div class="nav-item"><a href="/experiences/" class="nav-link router-link-exact-active router-link-active">Experiences</a></div>
                     </nav>
                 </div>
             </header>
